--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Valorant</title>
 
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="original-version.css">
+    <link rel="stylesheet" href="version1.css">
 </head>
 
 <body>
     <!-- Original Version Start -->
-    <div class="og-container">
+    <div class="container">
         <div class="header">
             <p>Original Version</p>
         </div>
@@ -71,7 +72,7 @@
                             <img src="./images/flame.svg" alt="alev">
                             <span>959 items bought in the last hour</span>
                         </div>
-                    
+
                         <div class="amount-vp">
                             <div class="vp-card" onclick="selectCard(this)">
                                 <div class="top">
@@ -170,6 +171,169 @@
     </div>
     <!-- Original Version End -->
 
+
+    <!-- Version 1 Start-->
+    <div class="container">
+        <div class="header">
+            <p>Version 1</p>
+        </div>
+
+        <div class="vers1">
+            <div class="vers1-top">
+                <div class="overlay"></div>
+                <div class="wrapper">
+                    <div class="vers1-features">
+                        <div class="vers1-ftr-pay">
+                            <img src="./images/secure-payment.svg" alt="güvenli ödeme logo">
+
+                        </div>
+                        <div class="vers1-ftr-partner">
+                            <img src="./images/verify-v1.svg" alt="resmi partner logo">
+                        </div>
+                        <div class="pc-version">
+                            <img src="./images/pc.svg" alt="pc">
+                            <div>
+                                <span>Avaliable on</span>
+                                <span>PC Version</span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <p>Saniyeler içinde VALORANT VP yükle! Yalnızca VALORANT kullanıcı
+                        adını gir, yüklemek istediğin VP miktarını seç, ödemeyi tamamla
+                        ve VP anında VALORANT hesabına yüklenmiş olsun!
+                        Üye olmana gerek kalmadan kolay ve hızlı bir şekilde Havale/EFT,
+                        ATM veya PTT ile ödemeni yap!
+
+                    </p>
+
+                    <h1>Hemen VALORANT bugün indir!</h1>
+                    
+                </div>
+            </div>
+            <!-- <div class="og-right">
+                <div class="riot">
+                    <div class="riot-content">
+                        <div class="riot-title">
+                            <div><span>1</span></div>
+                            <p>Riod ID Girin</p>
+                        </div>
+                        <div class="riot-input">
+                            <input type="text" placeholder="Riot ID Girin">
+                            <img src="./images/q-mark.svg" alt="soru işareti">
+                        </div>
+                        <p class="riot-exp">Riot D'nizi bulmak için profil sayfasına giriniz ve Riot ID'nizin yanında
+                            bulunan ufak ikona tıklayınız. (ORN: Westbourne#SEA)</p>
+                    </div>
+                </div>
+                <div class="amount">
+                    <div class="amount-content">
+                        <div class="riot-title">
+                            <div><span>2</span></div>
+                            <p>Dolum Miktarı Seç</p>
+                        </div>
+                        <div class="amount-notice">
+                            <img src="./images/flame.svg" alt="alev">
+                            <span>959 items bought in the last hour</span>
+                        </div>
+
+                        <div class="amount-vp">
+                            <div class="vp-card" onclick="selectCard(this)">
+                                <div class="top">
+                                    <p>150 VP</p>
+                                    <span></span>
+                                    <img src="images/valo-logo.svg" alt="valo-logo">
+                                </div>
+                                <div class="bottom">
+                                    <span>En düşük</span>
+                                    <span>33 TL</span>
+                                </div>
+                            </div>
+                            <div class="vp-card" onclick="selectCard(this)">
+                                <div class="top">
+                                    <p>610 VP</p>
+                                    <span>(590 + 20 Bonus)</span>
+                                    <img src="images/valo-logo.svg" alt="valo-logo">
+                                </div>
+                                <div class="bottom">
+                                    <span>En düşük</span>
+                                    <span>130 TL</span>
+                                </div>
+                            </div>
+                            <div class="vp-card" onclick="selectCard(this)">
+                                <div class="top">
+                                    <p>1275 VP</p>
+                                    <span>(1125 + 150 Bonus)</span>
+                                    <img src="images/valo-logo.svg" alt="valo-logo">
+                                </div>
+                                <div class="bottom">
+                                    <span>En düşük</span>
+                                    <span>250 TL</span>
+                                </div>
+                            </div>
+                            <div class="vp-card" onclick="selectCard(this)">
+                                <div class="top">
+                                    <p>2350 VP</p>
+                                    <span>(2050 + 300 Bonus)</span>
+                                    <img src="images/valo-logo.svg" alt="valo-logo">
+                                </div>
+                                <div class="bottom">
+                                    <span>En düşük</span>
+                                    <span>450 TL</span>
+                                </div>
+                            </div>
+                            <div class="vp-card" onclick="selectCard(this)">
+                                <div class="top">
+                                    <p>3820 VP</p>
+                                    <span>(3180 + 640 Bonus)</span>
+                                    <img src="images/valo-logo.svg" alt="valo-logo">
+                                </div>
+                                <div class="bottom">
+                                    <span>En düşük</span>
+                                    <span>700 TL</span>
+                                </div>
+                            </div>
+                            <div class="vp-card" onclick="selectCard(this)">
+                                <div class="top">
+                                    <p>8225 VP</p>
+                                    <span>(6375 + 1850 Bonus)</span>
+                                    <img src="images/valo-logo.svg" alt="valo-logo">
+                                </div>
+                                <div class="bottom">
+                                    <span>En düşük</span>
+                                    <span>1.400 TL</span>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="payment">
+                    <div class="payment-content">
+                        <div class="riot-title">
+                            <div><span>3</span></div>
+                            <p>Ödeme Yöntemi Seç</p>
+                        </div>
+
+                        <div class="payment-box">
+                            <div class="payment-box-select">
+                                <div>
+                                    <img src="./images/xbox-logo.svg" alt="xbox">
+                                    <img src="./images/ptt-logo.png" alt="ptt">
+                                    <img src="./images/atm-logo.png" alt="atm">
+                                </div>
+                                <p>Havale/EFT, ATM veya PTT ile Öde</p>
+                            </div>
+                            <span>33 TL</span>
+                        </div>
+
+                        <a href="#">Başka bir ödeme yöntemi kullanmak istiyorum</a>
+                    </div>
+                </div>
+            </div> -->
+        </div>
+    </div>
+    <!-- Version 2 End -->
     <script src="./index.js"></script>
 </body>
 
